applied black formatting to notebooks and added unique reader % growth calculation

--- a/Python Blog Readers Analysis 2016-2023.ipynb
+++ b/Python Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 175,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 176,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 177,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 178,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -260,10 +260,10 @@
    ],
    "source": [
     "print(\"Wordpress hosted PythonMarketer.com from 2016 - 2023 (5 months in 2023).\")\n",
-    "wordpress_years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\",\"2021\",\"2022\"]\n",
+    "wordpress_years = [\"2016\", \"2017\", \"2018\", \"2019\", \"2020\", \"2021\", \"2022\"]\n",
     "counts = [sum(unique_readers[year].values()) for year in wordpress_years]\n",
-    "months = [\"Jan\",\"Feb\",\"Mar\",\"Apr\"]\n",
-    "ytd_counts = [unique_readers[\"2023\"].get(month) for month in months]     \n",
+    "months = [\"Jan\", \"Feb\", \"Mar\", \"Apr\"]\n",
+    "ytd_counts = [unique_readers[\"2023\"].get(month) for month in months]\n",
     "counts = ytd_counts + counts\n",
     "# May Wordpress views\n",
     "counts.append(484)\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 179,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -280,23 +280,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On May 17th, the lofipython.com Cloudflare Pages domain went live with 100 posts migrated from PythonMarketer.com (now deactivated).\n",
-      "In May to August 2023, it amassed 12,880 unique visitors.\n"
+      "On May 17th 2023, the lofipython.com Cloudflare Pages domain went live.\n",
+      "The refactored blog began with 100 posts migrated from PythonMarketer.com (now deactivated).\n",
+      "In May to August 2023, lofipython.com amassed 12,880 unique visitors.\n"
      ]
     }
    ],
    "source": [
-    "print(f\"On May 17th, the lofipython.com Cloudflare Pages domain went live with 100 posts migrated from PythonMarketer.com (now deactivated).\")\n",
-    "cloudflare_months = [\"June\",\"July\",\"Aug\"]\n",
-    "counts = [unique_readers[\"2023\"].get(month) for month in cloudflare_months]     \n",
+    "print(\"On May 17th 2023, the lofipython.com Cloudflare Pages domain went live.\")\n",
+    "print(\"The refactored blog began with 100 posts migrated from PythonMarketer.com (now deactivated).\")\n",
+    "cloudflare_months = [\"June\", \"July\", \"Aug\"]\n",
+    "counts = [unique_readers[\"2023\"].get(month) for month in cloudflare_months]\n",
     "# Add 1,500 Cloudflare readers in May migration month, split w/ Wordpress.\n",
     "counts.append(1500)\n",
-    "print(f\"In May to August 2023, it amassed {sum(counts):,} unique visitors.\")"
+    "print(f\"In May to August 2023, lofipython.com amassed {sum(counts):,} unique visitors.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 180,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -310,7 +312,7 @@
     }
    ],
    "source": [
-    "years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\"]\n",
+    "years = [\"2016\", \"2017\", \"2018\", \"2019\", \"2020\"]\n",
     "counts = [sum(unique_readers[year].values()) for year in years]\n",
     "print(f\"Blog unique visitors, first 5 years: {sum(counts):,}\")\n",
     "print(f\"Blog unique visitors, 2023: {sum(unique_readers['2023'].values()):,}\")"
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 181,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -342,13 +344,13 @@
        " ('2023', 17281)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\",\"2021\",\"2022\",\"2023\"]\n",
+    "years = [\"2016\", \"2017\", \"2018\", \"2019\", \"2020\", \"2021\", \"2022\", \"2023\"]\n",
     "counts = [(year, sum(unique_readers[year].values())) for year in years]\n",
     "print(\"Python Blog Unique Visitors All-Time\")\n",
     "counts"
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 182,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
    "outputs": [
@@ -442,25 +444,25 @@
        "max      17281             2160"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Convert annual visitor counts to pandas dataframe and calculate monthly average for each year.\n",
-    "readers = pd.DataFrame(counts, columns=[\"year\",\"readers\"])\n",
-    "readers[\"monthly_average\"] = readers.readers.apply(lambda num: int(num/12))\n",
+    "readers = pd.DataFrame(counts, columns=[\"year\", \"readers\"])\n",
+    "readers[\"monthly_average\"] = readers.readers.apply(lambda num: int(num / 12))\n",
     "# Modify current year average to # of months in 2023 so far.\n",
     "ytd_readers = sum(unique_readers[\"2023\"].values())\n",
-    "readers.loc[7, \"monthly_average\"] = int(ytd_readers/8)\n",
+    "readers.loc[7, \"monthly_average\"] = int(ytd_readers / 8)\n",
     "# .map requires pandas 2.1.0. Use .applymap for older pandas versions: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.map.html#pandas.DataFrame.map\n",
     "readers.describe().map(lambda num: int(num))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 183,
    "id": "a91136ef",
    "metadata": {},
    "outputs": [
@@ -468,7 +470,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3615/2196096974.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_5043/894456117.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -484,7 +486,9 @@
     }
    ],
    "source": [
-    "ax = readers.readers.plot(kind=\"line\", title=\"Total Python Blog Readers Per Month, 2016-2023\")\n",
+    "ax = readers.readers.plot(\n",
+    "    kind=\"line\", title=\"Total Python Blog Readers Per Month, 2016-2023\"\n",
+    ")\n",
     "years = [\"axis filler\"] + list(readers.year)\n",
     "ax.set_xticklabels(years)\n",
     "plt.show()"
@@ -492,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 184,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -500,7 +504,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3615/903802533.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_5043/2546492478.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -516,7 +520,9 @@
     }
    ],
    "source": [
-    "ax = readers.monthly_average.plot(kind=\"line\", title=\"Average Python Blog Readers Per Month, 2016-2023\")\n",
+    "ax = readers.monthly_average.plot(\n",
+    "    kind=\"line\", title=\"Average Python Blog Readers Per Month, 2016-2023\"\n",
+    ")\n",
     "years = [\"axis filler\"] + list(readers.year)\n",
     "ax.set_xticklabels(years)\n",
     "plt.show()"
@@ -524,7 +530,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 185,
+   "id": "17deef2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Migrating the blog to a Cloudflare pages free plan was a good idea. It saves $48 per year vs. Wordpress Personal plan.\n",
+      "Blog visitors are now at an all-time high! Average unique readers per month are up 688.32% over 2020, 3 years ago.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Migrating the blog to a Cloudflare pages free plan was a good idea. It saves $48 per year vs. Wordpress Personal plan.\")\n",
+    "three_years_ago = readers.at[4, \"monthly_average\"]\n",
+    "now = readers.at[7, \"monthly_average\"]\n",
+    "growth = ((now - three_years_ago) / three_years_ago) * 100\n",
+    "print(f\"Blog visitors are now at an all-time high! Average unique readers per month are up {round(growth, 2)}% over 2020, 3 years ago.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "id": "bad0c70d",
    "metadata": {},
    "outputs": [
@@ -533,69 +562,69 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_104a2\">\n",
+       "<table id=\"T_8b003\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_104a2_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_104a2_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_104a2_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_8b003_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_8b003_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_8b003_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_104a2_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_104a2_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_104a2_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_8b003_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_8b003_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_8b003_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_104a2_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_104a2_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_104a2_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_8b003_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_8b003_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_8b003_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_104a2_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_104a2_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_104a2_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_8b003_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_8b003_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_8b003_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_104a2_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_104a2_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_104a2_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_8b003_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_8b003_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_8b003_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_104a2_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_104a2_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
-       "      <td id=\"T_104a2_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_8b003_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_8b003_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
+       "      <td id=\"T_8b003_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_104a2_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_104a2_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
-       "      <td id=\"T_104a2_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
+       "      <td id=\"T_8b003_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_8b003_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
+       "      <td id=\"T_8b003_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_104a2_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_104a2_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
-       "      <td id=\"T_104a2_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
+       "      <td id=\"T_8b003_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_8b003_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
+       "      <td id=\"T_8b003_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_104a2_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_104a2_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
-       "      <td id=\"T_104a2_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
+       "      <td id=\"T_8b003_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_8b003_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
+       "      <td id=\"T_8b003_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7ef4890b6e80>"
+       "<pandas.io.formats.style.Styler at 0x7d8218512520>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "number_cols = [\"readers\",\"monthly_average\"]\n",
+    "number_cols = [\"readers\", \"monthly_average\"]\n",
     "readers[number_cols] = readers[number_cols].map(lambda num: f\"{int(num):,}\")\n",
     "readers.style.hide()"
    ]
