added random 25 sample view of referral sources

--- a/Python Blog Readers Analysis 2016-2023.ipynb
+++ b/Python Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 200,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 201,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 202,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 203,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 204,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 205,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 206,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        " ('2023', 17281)]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 207,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "max      17281             2160"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 208,
    "id": "a91136ef",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 209,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -530,8 +530,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "17deef2d",
+   "execution_count": 210,
+   "id": "fbc7cd7e",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
      "output_type": "stream",
      "text": [
       "Migrating the blog to a Cloudflare pages free plan was a good idea. It saves $48 per year vs. Wordpress Personal plan.\n",
-      "Blog visitors are now at an all-time high! Average unique readers per month are up 688.32% over 2020, 3 years ago.\n"
+      "Also, blog visitors are now at an all-time high! Average unique readers per month are up 688.32% over 2020, 3 years ago.\n"
      ]
     }
    ],
@@ -548,12 +548,12 @@
     "three_years_ago = readers.at[4, \"monthly_average\"]\n",
     "now = readers.at[7, \"monthly_average\"]\n",
     "growth = ((now - three_years_ago) / three_years_ago) * 100\n",
-    "print(f\"Blog visitors are now at an all-time high! Average unique readers per month are up {round(growth, 2)}% over 2020, 3 years ago.\")"
+    "print(f\"Also, blog visitors are now at an all-time high! Average unique readers per month are up {round(growth, 2)}% over 2020, 3 years ago.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 211,
    "id": "bad0c70d",
    "metadata": {},
    "outputs": [
@@ -562,63 +562,63 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_8b003\">\n",
+       "<table id=\"T_c8162\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_8b003_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_8b003_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_8b003_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_c8162_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_c8162_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_c8162_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_8b003_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_8b003_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_8b003_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_c8162_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_c8162_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_c8162_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_8b003_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_8b003_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_8b003_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_c8162_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_c8162_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_c8162_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_8b003_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_8b003_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_8b003_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_c8162_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_c8162_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_c8162_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_8b003_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_8b003_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_8b003_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_c8162_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_c8162_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_c8162_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_8b003_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_8b003_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
-       "      <td id=\"T_8b003_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_c8162_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_c8162_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
+       "      <td id=\"T_c8162_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_8b003_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_8b003_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
-       "      <td id=\"T_8b003_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
+       "      <td id=\"T_c8162_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_c8162_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
+       "      <td id=\"T_c8162_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_8b003_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_8b003_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
-       "      <td id=\"T_8b003_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
+       "      <td id=\"T_c8162_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_c8162_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
+       "      <td id=\"T_c8162_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_8b003_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_8b003_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
-       "      <td id=\"T_8b003_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
+       "      <td id=\"T_c8162_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_c8162_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
+       "      <td id=\"T_c8162_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7d8218512520>"
+       "<pandas.io.formats.style.Styler at 0x7d8218108250>"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
