--- a/Python Blog Readers Analysis 2016-2023.ipynb
+++ b/Python Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 45,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 46,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 47,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 48,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -267,12 +267,13 @@
     "counts = ytd_counts + counts\n",
     "# May Wordpress views\n",
     "counts.append(484)\n",
-    "print(f\"Total Wordpress Blog Readers, 2016-2023: {sum(counts):,}\")"
+    "wordpress_unique_visitors = sum(counts)\n",
+    "print(f\"Total Wordpress Blog Readers, 2016-2023: {wordpress_unique_visitors:,}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 49,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -281,24 +282,27 @@
      "output_type": "stream",
      "text": [
       "On May 17th 2023, the lofipython.com Cloudflare Pages domain went live.\n",
-      "The refactored blog began with 100 posts migrated from PythonMarketer.com (now deactivated).\n",
-      "In May to August 2023, lofipython.com amassed 12,880 unique visitors.\n"
+      "The converted Pelican blog began with 100 posts from PythonMarketer.com \\ Wordpress (now deactivated).\n",
+      "In May to August 2023, lofipython.com amassed 12,880 unique visitors.\n",
+      "In 4 months, the new blog reached 34% of its total unique visitors from the previous 8 years.\n"
      ]
     }
    ],
    "source": [
     "print(\"On May 17th 2023, the lofipython.com Cloudflare Pages domain went live.\")\n",
-    "print(\"The refactored blog began with 100 posts migrated from PythonMarketer.com (now deactivated).\")\n",
+    "print(\"The converted Pelican blog began with 100 posts from PythonMarketer.com \\ Wordpress (now deactivated).\")\n",
     "cloudflare_months = [\"June\", \"July\", \"Aug\"]\n",
     "counts = [unique_readers[\"2023\"].get(month) for month in cloudflare_months]\n",
     "# Add 1,500 Cloudflare readers in May migration month, split w/ Wordpress.\n",
     "counts.append(1500)\n",
-    "print(f\"In May to August 2023, lofipython.com amassed {sum(counts):,} unique visitors.\")"
+    "print(f\"In May to August 2023, lofipython.com amassed {sum(counts):,} unique visitors.\")\n",
+    "percent = int((sum(counts)/wordpress_unique_visitors)*100)\n",
+    "print(f\"In 4 months, the new blog reached {percent}% of its total unique visitors from the previous 8 years.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 50,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -320,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 51,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -344,7 +348,7 @@
        " ('2023', 17281)]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 52,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
    "outputs": [
@@ -444,7 +448,7 @@
        "max      17281             2160"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 53,
    "id": "a91136ef",
    "metadata": {},
    "outputs": [
@@ -470,7 +474,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5043/894456117.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_5896/894456117.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -496,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 54,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -504,7 +508,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5043/2546492478.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_5896/2546492478.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -530,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 55,
    "id": "fbc7cd7e",
    "metadata": {},
    "outputs": [
@@ -553,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 56,
    "id": "bad0c70d",
    "metadata": {},
    "outputs": [
@@ -562,63 +566,63 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_c8162\">\n",
+       "<table id=\"T_fd36a\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_c8162_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_c8162_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_c8162_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_fd36a_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_fd36a_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_fd36a_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_c8162_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_c8162_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_c8162_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_fd36a_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_fd36a_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_fd36a_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_c8162_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_c8162_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_c8162_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_fd36a_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_fd36a_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_fd36a_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_c8162_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_c8162_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_c8162_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_fd36a_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_fd36a_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_fd36a_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_c8162_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_c8162_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_c8162_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_fd36a_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_fd36a_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_fd36a_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_c8162_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_c8162_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
-       "      <td id=\"T_c8162_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_fd36a_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_fd36a_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
+       "      <td id=\"T_fd36a_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_c8162_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_c8162_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
-       "      <td id=\"T_c8162_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
+       "      <td id=\"T_fd36a_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_fd36a_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
+       "      <td id=\"T_fd36a_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_c8162_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_c8162_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
-       "      <td id=\"T_c8162_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
+       "      <td id=\"T_fd36a_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_fd36a_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
+       "      <td id=\"T_fd36a_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_c8162_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_c8162_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
-       "      <td id=\"T_c8162_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
+       "      <td id=\"T_fd36a_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_fd36a_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
+       "      <td id=\"T_fd36a_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7d8218108250>"
+       "<pandas.io.formats.style.Styler at 0x7cd57f8e2760>"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
