--- a/Python Blog Readers Analysis 2016-2023.ipynb
+++ b/Python Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -296,13 +296,13 @@
     "# Add 1,500 Cloudflare readers in May migration month, split w/ Wordpress.\n",
     "counts.append(1500)\n",
     "print(f\"In May to August 2023, lofipython.com amassed {sum(counts):,} unique visitors.\")\n",
-    "percent = int((sum(counts)/wordpress_unique_visitors)*100)\n",
+    "percent = int((sum(counts) / wordpress_unique_visitors) * 100)\n",
     "print(f\"In 4 months, the new blog reached {percent}% of its total unique visitors from the previous 8 years.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        " ('2023', 17281)]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "max      17281             2160"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,13 +460,12 @@
     "# Modify current year average to # of months in 2023 so far.\n",
     "ytd_readers = sum(unique_readers[\"2023\"].values())\n",
     "readers.loc[7, \"monthly_average\"] = int(ytd_readers / 8)\n",
-    "# .map requires pandas 2.1.0. Use .applymap for older pandas versions: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.map.html#pandas.DataFrame.map\n",
-    "readers.describe().map(lambda num: int(num))"
+    "readers.describe().astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "a91136ef",
    "metadata": {},
    "outputs": [
@@ -474,7 +473,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5896/894456117.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_2295/894456117.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -500,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -508,7 +507,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5896/2546492478.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_2295/2546492478.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -534,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "id": "fbc7cd7e",
    "metadata": {},
    "outputs": [
@@ -557,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "id": "bad0c70d",
    "metadata": {},
    "outputs": [
@@ -566,70 +565,71 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_fd36a\">\n",
+       "<table id=\"T_cac4b\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_fd36a_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_fd36a_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_fd36a_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_cac4b_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_cac4b_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_cac4b_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_fd36a_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_fd36a_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_fd36a_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_cac4b_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_cac4b_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_cac4b_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_fd36a_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_fd36a_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_fd36a_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_cac4b_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_cac4b_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_cac4b_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_fd36a_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_fd36a_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_fd36a_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_cac4b_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_cac4b_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_cac4b_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_fd36a_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_fd36a_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_fd36a_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_cac4b_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_cac4b_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_cac4b_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_fd36a_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_fd36a_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
-       "      <td id=\"T_fd36a_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_cac4b_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_cac4b_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
+       "      <td id=\"T_cac4b_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_fd36a_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_fd36a_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
-       "      <td id=\"T_fd36a_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
+       "      <td id=\"T_cac4b_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_cac4b_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
+       "      <td id=\"T_cac4b_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_fd36a_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_fd36a_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
-       "      <td id=\"T_fd36a_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
+       "      <td id=\"T_cac4b_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_cac4b_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
+       "      <td id=\"T_cac4b_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_fd36a_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_fd36a_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
-       "      <td id=\"T_fd36a_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
+       "      <td id=\"T_cac4b_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_cac4b_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
+       "      <td id=\"T_cac4b_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7cd57f8e2760>"
+       "<pandas.io.formats.style.Styler at 0x7a9862a86250>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# .map requires pandas 2.1.0. Use .applymap for older pandas versions: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.map.html#pandas.DataFrame.map\n",
     "number_cols = [\"readers\", \"monthly_average\"]\n",
-    "readers[number_cols] = readers[number_cols].map(lambda num: f\"{int(num):,}\")\n",
+    "readers[number_cols] = readers[number_cols].astype(int).map(lambda num: f\"{num:,}\")\n",
     "readers.style.hide()"
    ]
   }
