--- a/Python Blog Readers Analysis 2016-2024.ipynb
+++ b/Python Blog Readers Analysis 2016-2024.ipynb
@@ -129,7 +129,8 @@
       "          'Sept': 4680,\n",
       "          'Oct': 3760,\n",
       "          'Nov': 4570,\n",
-      "          'Dec': 4300}}\n"
+      "          'Dec': 4300},\n",
+      " '2024': {'Jan': 4380}}\n"
      ]
     }
    ],
@@ -246,6 +247,9 @@
     "        \"Oct\": 3760,\n",
     "        \"Nov\": 4570,\n",
     "        \"Dec\": 4300,\n",
+    "    },\n",
+    "    \"2024\": {\n",
+    "        \"Jan\": 4380,\n",
     "    },\n",
     "}\n",
     "pprint.pprint(unique_readers, sort_dicts=False)"
@@ -481,7 +485,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4505/203123713.py:6: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_1797/203123713.py:6: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -516,7 +520,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4505/3535215991.py:5: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_1797/3535215991.py:5: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -574,60 +578,60 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_0a541\">\n",
+       "<table id=\"T_47f39\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_0a541_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_0a541_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_0a541_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_47f39_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_47f39_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_47f39_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_0a541_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_0a541_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_0a541_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_47f39_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_47f39_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_47f39_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_0a541_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_0a541_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_0a541_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_47f39_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_47f39_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_47f39_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_0a541_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_0a541_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_0a541_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_47f39_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_47f39_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_47f39_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_0a541_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_0a541_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_0a541_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_47f39_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_47f39_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_47f39_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_0a541_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_0a541_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
-       "      <td id=\"T_0a541_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_47f39_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_47f39_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
+       "      <td id=\"T_47f39_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_0a541_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_0a541_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
-       "      <td id=\"T_0a541_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
+       "      <td id=\"T_47f39_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_47f39_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
+       "      <td id=\"T_47f39_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_0a541_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_0a541_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
-       "      <td id=\"T_0a541_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
+       "      <td id=\"T_47f39_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_47f39_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
+       "      <td id=\"T_47f39_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_0a541_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_0a541_row7_col1\" class=\"data row7 col1\" >34,591</td>\n",
-       "      <td id=\"T_0a541_row7_col2\" class=\"data row7 col2\" >3,144</td>\n",
+       "      <td id=\"T_47f39_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_47f39_row7_col1\" class=\"data row7 col1\" >34,591</td>\n",
+       "      <td id=\"T_47f39_row7_col2\" class=\"data row7 col2\" >3,144</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7d390b52d750>"
+       "<pandas.io.formats.style.Styler at 0x7d1a12024990>"
       ]
      },
      "execution_count": 12,
